Bug 867407 - Fix cloning of file URIs with search query strings (r=sworkman)